--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 1</title>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
 </head>
 <body data-page="page1">
     <div>
         <div id="droneInfo"></div>
     </div>
-    <div>
+    <nav>
         <a href="index.html">Page 1</a>
         <a href="page2.html">Page 2</a>
         <a href="page3.html">Page 3</a>
-    </div>
+    </nav>
     <script src="script.js"></script>
 </body>
 </html>
