--- a/public/page2.html
+++ b/public/page2.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 2</title>
+    <link rel="stylesheet" href="page2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
 </head>
 <body data-page="page2">
     <h1> Page 2 </h1>
     <div>
-        <p>Input temperature</p>
+        <p>🌡️ Input temperature (°C) 🌡️</p>
         <input type="text" id="droneIdInput">
         <button type="button" onclick="postDroneData()">Record</button>
     </div>
-    <div>
+    <nav>
         <a href="index.html">Page 1</a>
         <a href="page2.html">Page 2</a>
         <a href="page3.html">Page 3</a>
-    </div>
+    </nav>
     <script src="script.js"></script>
 </body>
 </html>
