--- a/public/page3.html
+++ b/public/page3.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 3</title>
+    <link rel="stylesheet" href="page3.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
 </head>
 <body data-page="page3">
     <h1> Page 3 </h1>
@@ -22,11 +25,11 @@
     </table>
     
     
-    <div>
+    <nav>
         <a href="index.html">Page 1</a>
         <a href="page2.html">Page 2</a>
         <a href="page3.html">Page 3</a>
-    </div>
+    </nav>
     <script src="script.js"></script>
 </body>
 </html>
